Controllers updated